[package]
name = "ledger-crypto-helpers"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
nanos_sdk = { git = "https://github.com/LedgerHQ/ledger-nanos-sdk.git" }
nanos_ui = { git = "https://github.com/LedgerHQ/ledger-nanos-ui.git" }
ledger-log = { git = "https://github.com/ea-nasir/ledger-log.git" }
zeroize = { version = "1.5.2", default-features = false }


[features]
speculos = ["nanos_sdk/speculos"]
